--- a/FileUploadApplication.csproj
+++ b/FileUploadApplication.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Google.Apis.Auth" Version="1.66.0" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.66.0.3309" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameWorkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="8.0.1" />
